--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <ul class="sponsor">
                     <li><img class="firm" src="images/client-databiz.svg" alt="Databiz"></li>
                     <li><img class="firm" src="images/client-audiophile.svg" alt="Audio Phile"></li>
-                    <li><img class="firm" src="images/client-databiz.svg" alt="Meet"></li>
+                    <li><img class="firm" src="images/client-meet.svg" alt="Meet"></li>
                     <li><img class="firm" src="images/client-maker.svg" alt="Maker"></li>
                 </ul>
                 <!-- </div> -->
